# Generator-Discord

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: template-request.md
.github/workflows/: build.yml  codeql.yml  npm-publish.yml  test.yml
app/: index.js  index.js.map  index.ts
assets/: Icon.afdesign
src/: index.ts
templates/javascript/: package.json
templates/javascript/src/: index.js
templates/python/: bot.py  config.py  main.py  requirements.txt
templates/rust/: Cargo.toml
templates/rust/src/: main.rs
templates/sound-bot/: README.md  config.json  package-lock.json  package.json  tsconfig.json
templates/sound-bot/src/: index.ts
templates/typescript/: config.json  package-lock.json  package.json  tsconfig.json
templates/typescript/src/: index.ts
test/: generator.test.ts  templates.test.ts
